--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,10 @@
 name: Required fields Workflow
 # Controls when the workflow will run
 # Triggers the workflow on push or pull request events but only for the "main" branch
-on: [issues]
+on:
+  issues:
+    types:  opened
+
  
 jobs:
   build:
