--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Required fields Workflow
 # Triggers the workflow on push or pull request events but only for the "main" branch
 on:
   issues:
-    types:  opened
+    types: [opened, edited]
 
  
 jobs:
