--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,7 @@
 name: Required fields Workflow
 # Controls when the workflow will run
 # Triggers the workflow on push or pull request events but only for the "main" branch
-on:
-  issues:
-    types: [opened, edited]
+on: [push,issues]
 
  
 jobs:
