--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 name: Required fields Workflow
 # Controls when the workflow will run
 # Triggers the workflow on push or pull request events but only for the "main" branch
-on: [push, issues, pull_request]
+on: [push, issues, pull_request, pull_request_review]
 
  
 jobs:
