--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,10 @@
 name: Required fields Workflow
 # Controls when the workflow will run
 # Triggers the workflow on push or pull request events but only for the "main" branch
-on: [push, issues, pull_request, pull_request_review]
+on:
+ pull_request_review:
+    types: [submitted, edited]
 
- 
 jobs:
   build:
     # The type of runner that the job will run on ubuntu
