--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,22 @@
-# This is a basic workflow to help you get started with Actions
 name: Required fields Workflow
-# Controls when the workflow will run
-# Triggers the workflow on push or pull request events but only for the "main" branch
-on:
- pull_request_review:
-    types: [submitted, edited]
+on: workflow_dispatch
 
 jobs:
   build:
-    # The type of runner that the job will run on ubuntu
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: print
       run: echo 'Runing build'
         
   test:
-     # The type of runner that the job will run on windows
      runs-on: windows-latest
-     # Steps represent a sequence of tasks that will be executed as part of the job
      steps:
       - name: print
         run: echo 'Runing build'
       - name: print gap
         run: echo 'Runing gap'
   deploy:
-       # The type of runner that the job will run on windows
        runs-on: windows-latest
-       # Steps represent a sequence of tasks that will be executed as part of the job
        steps:
         - name: print
           run: echo 'Runing build'
