--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -1,8 +1,8 @@
 name: issues Test
-on: 
-  issues :
-   types : [ opend ,closed ]
-   branch : main
+on:   
+  issues:
+    types: [opened, closed]
+    branch : main
   
    
 
