--- a/.github/workflows/main10.yml
+++ b/.github/workflows/main10.yml
@@ -1,9 +1,9 @@
 name:  Checking the with GitHub event Changes
 on:   
   push:
-    branches :
-      - main
-      - develop
+    #branches :
+     # - main
+     #- develop
   pull_request :
     types: [opened, synchronized]
    
@@ -11,16 +11,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - if : ${{github.event_name }} = pull
-      run: echo 'Trigger By Push'
+    - if : ${{github.event_name }} = push
+      run: echo 'Trigger By Push event name ${{github.event_name }}'
         
   test:
      runs-on: windows-latest
      steps:
-      - if : ${{github.event_name }} = pull
-        run: echo 'Trigger By Push'
+      - if : ${{github.event_name }} = push
+        run: echo 'Trigger By Push event name ${{github.event_name}}'
       - if : ${{github.event_name }} = pull_request
-        run: echo 'Trigger By Push'
+        run: echo 'Trigger By Push event name ${{github.event_name }}'
   deploy:
        runs-on: windows-latest
        steps:
