--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -14,4 +14,4 @@ jobs:
           distribution: 'oracle'
 
       - name: Print Java version
-        run: java --version
+        run: java -version
