--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -11,6 +11,9 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@v5.0.0
         with:
           scannerVersion: '7.0.2.4839'
+        
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Print SonarQube version
         run: sonar-scanner --version
