--- a/.github/workflows/githubcontext.yml
+++ b/.github/workflows/githubcontext.yml
@@ -27,7 +27,7 @@ jobs:
         - name : print about GitHub Context  Repository Details
           run : |
            echo 'A unique number for each workflow run within a repository ${{github.run_id}}'
-           echo 'A unique number for each run of a particular workflow in a repository. This number begins at 1 for the workflow's first run, and increments with each new run ${{github.run_number}}'
-           echo 'A unique number for each attempt of a particular workflow run in a repository. ${{github.run_attempt}}'
+           echo 'A unique number for each run of a particular workflow in a repository ${{github.run_number}}'
+           echo 'A unique number for each attempt of a particular workflow run in a repository ${{github.run_attempt}}'
           
       
