--- a/.github/workflows/matrix_sff.yml
+++ b/.github/workflows/matrix_sff.yml
@@ -5,11 +5,12 @@ jobs:
   matrix-failfast-job:
     runs-on: ${{matrix.os}}
     strategy:
+     fail-fast: false
      matrix:
        os:
         - ubuntu-latest
         - windows-latest
-       java-version: [17,21,24]
+       java-version: [17,21,14]
     steps:
       - name: Setup Java JDK
         uses: actions/setup-java@v3.14.1
