--- a/.github/workflows/matrix_j_index.yml
+++ b/.github/workflows/matrix_j_index.yml
@@ -5,7 +5,7 @@ jobs:
   matrix-failfast-job:
     runs-on: ${{matrix.os}}
     strategy:
-     #fail-fast: false
+     fail-fast: false
      matrix:
       include:
        - index: 0
