--- a/.github/workflows/matrix_j_index.yml
+++ b/.github/workflows/matrix_j_index.yml
@@ -1,25 +1,25 @@
-name: Matrix With Strategy Job-Index 
+name: Matrix With Strategy Job-Index
+
 on:
   workflow_dispatch
+
 jobs:
   matrix-failfast-job:
-    
     strategy:
-     fail-fast: false
-     matrix:
-      include:
-       - index: 0
-         os: windows-latest
-       - index: 0
-         os: ubuntu-latest
-       - index: 0
-         java-version: 17
-       - index: 0
-         java-version: 21
-    runs-on: ${{matrix.os}}
+      fail-fast: false
+      matrix:
+        include:
+          - index: 0
+            os: windows-latest
+            java-version: 17
+          - index: 1
+            os: ubuntu-latest
+            java-version: 21
+    runs-on: ${{ matrix.os }}
+
     steps:
       - name: Setup Java JDK
         uses: actions/setup-java@v3.14.1
         with:
-         java-version: ${{matrix.java-version}}
-         distribution: corretto
+          java-version: ${{ matrix.java-version }}
+          distribution: 'corretto'
