--- a/.github/workflows/githubcontexte2.yml
+++ b/.github/workflows/githubcontexte2.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Show PR title
         if : ${{github.event_name }} == 'pull_request'
         run: |
-          -echo 'Trigger By pull request event name ${{github.event_name }}'
+           echo 'Trigger By pull request event name ${{github.event_name }}'
            echo 'PR title: ${{ github.event.pull_request.title }}'
            echo 'Opened by: ${{ github.event.pull_request.user.login }}'
       - name: Deploy to production
