--- a/.github/workflows/githubcontexte2.yml
+++ b/.github/workflows/githubcontexte2.yml
@@ -30,12 +30,12 @@ jobs:
   test:
      runs-on: windows-latest
      steps: 
-      - name: Show PR title
-        if : ${{github.event_name }} == 'pull_request'
-        run: |
-           echo 'Trigger By pull request event name ${{github.event_name }}'
-           echo 'PR title: ${{ github.event.pull_request.title }}'
-           echo 'Opened by: ${{ github.event.pull_request.user.login }}'
+     # - name: Show PR title
+       # if : ${{github.event_name }} == 'pull_request'
+       # run: |
+        #   echo 'Trigger By pull request event name ${{github.event_name }}'
+         #  echo 'PR title: ${{ github.event.pull_request.title }}'
+          # echo 'Opened by: ${{ github.event.pull_request.user.login }}'
       - name: Deploy to production
         if: github.ref == 'refs/heads/main'
         run: echo "Deploying to production!"
