--- a/.github/workflows/githubcontexte2.yml
+++ b/.github/workflows/githubcontexte2.yml
@@ -30,23 +30,24 @@ jobs:
   test:
      runs-on: windows-latest
      steps: 
+      - name: Show PR title
+        if : ${{github.event_name }} == 'pull_request'
+        run: |
+          echo 'Trigger By pull request event name ${{github.event_name }}'
+           echo 'PR title: ${{ github.event.pull_request.title }}'
+          echo 'Opened by: ${{ github.event.pull_request.user.login }}'
     
       - name: Deploy to production
         if: github.ref == 'refs/heads/main'
         run: echo "Deploying to production!"
-      - name: Comment on PR
-        run: |
-          curl -s -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d '{"body":"Thank you for the PR!"}' \
-            ${{ github.api_url }}/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments
-        # - name: Show PR title
-       # if : ${{github.event_name }} == 'pull_request'
-       # run: |
-        #  echo 'Trigger By pull request event name ${{github.event_name }}'
-         #  echo 'PR title: ${{ github.event.pull_request.title }}'
-          # echo 'Opened by: ${{ github.event.pull_request.user.login }}'
+     # - name: Comment on PR
+     #   run: |
+     #    curl -s -X POST \
+     #       -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+     #       -H "Content-Type: application/json" \
+     #       -d '{"body":"Thank you for the PR!"}' \
+     #       ${{ github.api_url }}/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments
+       
   
   log-pr-info:
     runs-on: ubuntu-latest
