--- a/.github/workflows/actionsall.yml
+++ b/.github/workflows/actionsall.yml
@@ -6,7 +6,6 @@ on:
     types: [opened, synchronized]
   workflow_dispatch:
 
-# Workflow-level variables
 env:
   MAVEN_TEST: "-Xmx1024m"
   BUILD_PROFILE_DEV: "release"
@@ -43,19 +42,27 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: 'oracle'
-         
 
       - name: Print Java Version
         run: java -version
 
       - name: Show Matrix Info
         run: |
-          echo 'Running index ${{ matrix.index }}'
-          echo 'OS: ${{ matrix.os }}, Java: ${{ matrix.java }}'
-          echo 'BUILD_PROFILE: ${{ env.MAVEN_TEST }}'
-          echo 'BUILD_PROFILE: ${{ vars.BUILD_PROFILE }}'
-          echo 'BUILD_PROFILE: ${{ env.BUILD_PROFILE_DEV }}'
-          echo 'BUILD_PROFILE: ${{ vars.MAVEN_OPTS}}'
-          echo 'API_TOKEN: ${{ secrets.API_TOKEN }}'
+          echo "Running index ${{ matrix.index }}"
+          echo "OS: ${{ matrix.os }}, Java: ${{ matrix.java }}"
+          echo "BUILD_PROFILE: ${{ env.MAVEN_TEST }}"
+          echo "BUILD_PROFILE_DEV: ${{ env.BUILD_PROFILE_DEV }}"
+          echo "API_TOKEN: ${{ secrets.API_TOKEN }}"
+
+  test:
+    name: Run Tests
+    needs: java-setup-single
+    if: ${{ github.event_name == 'push' }}
+    runs-on: windows-latest
+    steps:
+      - name: Echo Event Name
+        run: echo 'Triggered by event ${{ github.event_name }}'
+
+    
 
     
