--- a/.github/workflows/actionsall.yml
+++ b/.github/workflows/actionsall.yml
@@ -69,7 +69,7 @@ jobs:
 
   run-on-main-pr:
     needs: [java-setup-single, test]
-    if: ${{ github.event_name == 'pull_request' && github.base_ref == 'main' }}
+    if: ${{ (github.event_name == 'pull_request' && github.base_ref == 'main') || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     steps:
       - name: Echo Target Branch
