--- a/.github/workflows/actionsall.yml
+++ b/.github/workflows/actionsall.yml
@@ -44,7 +44,7 @@ jobs:
           distribution: 'oracle'
 
       - name: Print Java Version
-        run: java -version
+        run: java --version
 
       - name: Show Matrix Info
         run: |
@@ -91,14 +91,15 @@ jobs:
   event-on-push: 
     runs-on: windows-latest
     steps:
-    - name: Print Python Version
+    - name: on_push_event
       if: ${{ github.event_name == 'push' }}
-      run: python --version
-       echo "This PR targets the main branch!"
-    - name: workflow_dispatch
+      run:
+       echo 'Triggered by event ${{ github.event_name }}'
+    - name: workflow_dispatch_github_context
       if: ${{ github.event_name == 'workflow_dispatch' }}
-      run: python --version
-       echo "This PR targets the main branch!"
+      run: |
+       echo 'Workflow triggered by: ${{ github.actor }}'
+       echo 'Original trigger source: ${{ github.triggering_actor }}'
     
 
     
