--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -21,6 +21,12 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@v5.0.0
         with:
           scannerVersion: '7.0.2.4839'
+          
+          args: >
+            -Dsonar.projectKey=your_project_key
+            -Dsonar.organization=your_organization_key
+            -Dsonar.host.url=https://sonarcloud.io
+
         
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
